syntax="proto3";

option go_package = "cart/pkg/api/abstract;abstract";

message GeneralResponse {
    bool success = 1;
    string message = 2;
}
